--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     </header>
     <section>
         <div id="headline">
-            <h1>ROSEWOOD PARK ESTATE <br> ELEVATE YOUR LIVING</h1>
-            <h3>Rosewood park estate is one of the best estates in kilimani<br>It is a peaceful and serene place to live in</h3>
-            <a href=""><button class="btn">BOOK A HOUSE</button></a>
+            <div class="headlinesection">
+                <h1>ROSEWOOD PARK ESTATE<br>ELEVATE YOUR LIVING</h1>
+                <h3>Rosewood park estate is one of the best estates in kilimani<br>It is a peaceful and serene place to live in</h3>
+                <a href=""><button class="btn">BOOK A HOUSE</button></a>
+            </div>
         </div>
         <div id="first">
             <img src="bg-1.png" alt="rosewoodpark">
