--- a/index.html
+++ b/index.html
@@ -38,24 +38,16 @@
                 <h3>ABOUT US</h3>
                 <p>Rosewood park estate is a gated community offering state of the art houses and amenities.It is a vast area at the centre of Kilimani</p>
             </div>
-            <div id="aboutphoto">
                 <div id="pool">
                     <div>
                         <img src="pool photo.jpg" alt="pool" width="200px" height="150px">
                     </div>
+                </div>
+                <div id="gym">
                     <div>
                         <img src="Gym photo.jpg" alt="Gym" width="200px" height="150px">
                     </div>
                 </div>
-                <div id="sauna">
-                    <div>
-                        <img src="sauna photo.jpg" alt="sauna" width="200px" height="150px">
-                    </div>
-                    <div>
-                        <img src="children play.jpeg" alt="children play area" width="200px" height="150px">
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
     <footer>
