--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="inabout">
             <div id="aboutus">
                 <h3>ABOUT US</h3>
-                <p>Rosewood park estate is a gated community offering state of the art houses and amenities.It is a vast area at the centre of Kilimani</p>
+                <p>Rosewood park estate is<br>a gated community offering<br>state of the art houses and<br> amenities.It is a vast area at<br> the centre of Kilimani</p>
             </div>
                 <div id="pool">
                     <div>
