--- a/index.html
+++ b/index.html
@@ -38,16 +38,18 @@
                 <h3>ABOUT US</h3>
                 <p>Rosewood park estate is<br>a gated community offering<br>state of the art houses and<br> amenities.It is a vast area at<br> the centre of Kilimani</p>
             </div>
-                <div id="pool">
-                    <div>
-                        <img src="pool photo.jpg" alt="pool" width="200px" height="150px">
-                    </div>
-                </div>
-                <div id="gym">
-                    <div>
-                        <img src="Gym photo.jpg" alt="Gym" width="200px" height="150px">
-                    </div>
-                </div>
+            <div id="pool">
+                <img src="pool photo.jpg" alt="pool" width="300px" height="200px">
+            </div>
+            <div id="pool">
+                <img src="Gym photo.jpg" alt="Gym" width="300px" height="200px">
+            </div>
+            <div id="pool">
+                <img src="children play.jpeg" alt="play area" width="300px" height="200px">
+            </div>
+            <div id="pool">
+                <img src="sauna photo.jpg" alt="sauna" width="300px" height="200px">
+            </div>
         </div>
     </div>
     <footer>
