--- a/index.html
+++ b/index.html
@@ -39,16 +39,36 @@
                 <p>Rosewood park estate is<br>a gated community offering<br>state of the art houses and<br> amenities.It is a vast area at<br> the centre of Kilimani</p>
             </div>
             <div id="pool">
-                <img src="pool photo.jpg" alt="pool" width="300px" height="200px">
+                <img src="pool photo.jpg" alt="pool" class="pics" width="300px" height="200px">
+                <div class="middle">
+                    <div class="text">
+
+                    </div>
+                </div>
             </div>
             <div id="pool">
-                <img src="Gym photo.jpg" alt="Gym" width="300px" height="200px">
+                <img src="Gym photo.jpg" alt="Gym" class="pics" width="300px" height="200px">
+                <div class="middle">
+                    <div class="text">
+
+                    </div>
+                </div>
             </div>
             <div id="pool">
-                <img src="children play.jpeg" alt="play area" width="300px" height="200px">
+                <img src="children play.jpeg" alt="play area" class="pics" width="300px" height="200px">
+                <div class="middle">
+                    <div class="text">
+
+                    </div>
+                </div>
             </div>
             <div id="pool">
-                <img src="sauna photo.jpg" alt="sauna" width="300px" height="200px">
+                <img src="sauna photo.jpg" alt="sauna" class="pics" width="300px" height="200px">
+                <div class="middle">
+                    <div class="text">
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
