--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>Rosewood park estate is<br>a gated community offering<br>state of the art houses and<br> amenities.It is a vast area at<br> the centre of Kilimani</p>
             </div>
             <div id="pool">
-                <img src="pool photo.jpg" alt="pool" class="pics" width="300px" height="200px">
+                <img src="pool photo.jpg" alt="pool" class="pics">
                 <div class="middle">
                     <div class="text">
 
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div id="pool">
-                <img src="Gym photo.jpg" alt="Gym" class="pics" width="300px" height="200px">
+                <img src="Gym photo.jpg" alt="Gym" class="pics">
                 <div class="middle">
                     <div class="text">
 
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div id="pool">
-                <img src="children play.jpeg" alt="play area" class="pics" width="300px" height="200px">
+                <img src="children play.jpeg" alt="play area" class="pics">
                 <div class="middle">
                     <div class="text">
 
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div id="pool">
-                <img src="sauna photo.jpg" alt="sauna" class="pics" width="300px" height="200px">
+                <img src="sauna photo.jpg" alt="sauna" class="pics">
                 <div class="middle">
                     <div class="text">
 
