--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img src="pool photo.jpg" alt="pool" class="pics">
                 <div class="middle">
                     <div class="text">
-
+                        <p>HEATED SWIMMING POOL</p>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                 <img src="Gym photo.jpg" alt="Gym" class="pics">
                 <div class="middle">
                     <div class="text">
-
+                        <p>FULLY EQUIPED GYM</p>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                 <img src="children play.jpeg" alt="play area" class="pics">
                 <div class="middle">
                     <div class="text">
-
+                        <p>CHILDREN'S PLAY AREA</p>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                 <img src="sauna photo.jpg" alt="sauna" class="pics">
                 <div class="middle">
                     <div class="text">
-
+                        <P>SAUNA AND SPA</P>
                     </div>
                 </div>
             </div>
