--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </section>
     <!-------about us -->
     <div id="about">
+        <h3 style="text-align: center;">AMENITIES</h3>
         <div id="inabout">
             <div id="aboutus">
                 <h3>ABOUT US</h3>
