--- a/index.html
+++ b/index.html
@@ -33,12 +33,21 @@
     </section>
     <!-------about us -->
     <div id="about">
-        <h3 style="text-align: center;">AMENITIES</h3>
+        <h3 style="text-align: center;">ABOUT US</h3>
         <div id="inabout">
             <div id="aboutus">
                 <h3>ABOUT US</h3>
                 <p>Rosewood park estate is<br>a gated community offering<br>state of the art houses and<br> amenities.It is a vast area at<br> the centre of Kilimani</p>
             </div>
+            <div>
+                <img src="" alt="about">
+            </div>
+        </div>
+
+    </div>
+    <div id="amenities">
+        <h3 style="text-align: center;">AMENITIES</h3>
+        <div id="inamenities">
             <div id="pool">
                 <img src="pool photo.jpg" alt="pool" class="pics">
                 <div class="middle">
