--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
                 <h3>ABOUT US</h3>
                 <p>Rosewood park estate is<br>a gated community offering<br>state of the art houses and<br> amenities.It is a vast area at<br> the centre of Kilimani</p>
             </div>
-            <div>
-                <img src="" alt="about">
+            <div id="aboutphoto">
+                
             </div>
         </div>
-
     </div>
     <div id="amenities">
         <h3 style="text-align: center;">AMENITIES</h3>
