--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <h3 style="text-align: center;">ABOUT US</h3>
         <div id="inabout">
             <div id="aboutus">
-                <h3>ABOUT US</h3>
-                <p>Rosewood park estate is<br>a gated community offering<br>state of the art houses and<br> amenities.It is a vast area at<br> the centre of Kilimani</p>
+                <h3 style="text-align: center;">ABOUT</h3>
+                <p>Rosewood park estate is a gated community offering<br>state of the art houses and amenities. It is a vast and<br>serene area at the centre of Kilimani. It comprises of<br>all sorts of houses which include one to four bedroom apartments. It also comprises of studios and gives one<br>a vast number alternatives to choose from based on his<br>or her specifications </p>
             </div>
             <div id="aboutphoto">
-                
+
             </div>
         </div>
     </div>
@@ -48,7 +48,7 @@
         <h3 style="text-align: center;">AMENITIES</h3>
         <div id="inamenities">
             <div id="pool">
-                <img src="pool photo.jpg" alt="pool" class="pics">
+                <img src="pool.jpg" alt="pool" class="pics">
                 <div class="middle">
                     <div class="text">
                         <p>HEATED SWIMMING POOL</p>
@@ -68,6 +68,22 @@
                 <div class="middle">
                     <div class="text">
                         <p>CHILDREN'S PLAY AREA</p>
+                    </div>
+                </div>
+            </div>
+            <div id="pool">
+                <img src="sauna photo.jpg" alt="sauna" class="pics">
+                <div class="middle">
+                    <div class="text">
+                        <P>SAUNA AND SPA</P>
+                    </div>
+                </div>
+            </div>
+            <div id="pool">
+                <img src="surveillance.jpg" alt="sauna" class="pics">
+                <div class="middle">
+                    <div class="text">
+                        <P>24/7 SURVEILLANCE</P>
                     </div>
                 </div>
             </div>
