Brown commited this

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h3 style="text-align: center;">ABOUT US</h3>
         <div id="inabout">
             <div id="aboutus">
-                <h3 style="text-align: center;">ABOUT</h3>
+                <h3 style="text-align: center;">ABOUT US</h3>
                 <p>Rosewood park estate is a gated community offering<br>state of the art houses and amenities. It is a vast and<br>serene area at the centre of Kilimani. It comprises of<br>all sorts of houses which include one to four bedroom apartments. It also comprises of studios and gives one<br>a vast number alternatives to choose from based on his<br>or her specifications </p>
             </div>
             <div id="aboutphoto">
