Adden socials icons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="image-removebg-preview.png" alt="rosewoodpark" width="160" height="130">
+            <img src="landingpageimages/image-removebg-preview.png" alt="rosewoodpark" width="160" height="130">
         </div>
         <nav>
             <a href="#home">HOME</a>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div id="first">
-            <img src="bg-1.png" alt="rosewoodpark">
+            <img src="landingpageimages/bg-1.png" alt="rosewoodpark">
         </div>
     </section>
     <!-------about us -->
@@ -48,7 +48,7 @@
         <h3 style="text-align: center;">AMENITIES</h3>
         <div id="inamenities">
             <div id="pool">
-                <img src="pool.jpg" alt="pool" class="pics">
+                <img src="landingpageimages/pool.jpg" alt="pool" class="pics">
                 <div class="middle">
                     <div class="text">
                         <p>HEATED SWIMMING POOL</p>
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div id="pool">
-                <img src="Gym photo.jpg" alt="Gym" class="pics">
+                <img src="landingpageimages/Gym photo.jpg" alt="Gym" class="pics">
                 <div class="middle">
                     <div class="text">
                         <p>FULLY EQUIPED GYM</p>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div id="pool">
-                <img src="children play.jpeg" alt="play area" class="pics">
+                <img src="landingpageimages/children play.jpeg" alt="play area" class="pics">
                 <div class="middle">
                     <div class="text">
                         <p>CHILDREN'S PLAY AREA</p>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div id="pool">
-                <img src="sauna photo.jpg" alt="sauna" class="pics">
+                <img src="landingpageimages/sauna photo.jpg" alt="sauna" class="pics">
                 <div class="middle">
                     <div class="text">
                         <P>SAUNA AND SPA</P>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div id="pool">
-                <img src="surveillance.jpg" alt="sauna" class="pics">
+                <img src="landingpageimages/surveillance.jpg" alt="sauna" class="pics">
                 <div class="middle">
                     <div class="text">
                         <P>24/7 SURVEILLANCE</P>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div id="pool">
-                <img src="sauna photo.jpg" alt="sauna" class="pics">
+                <img src="landingpageimages/sauna photo.jpg" alt="sauna" class="pics">
                 <div class="middle">
                     <div class="text">
                         <P>SAUNA AND SPA</P>
@@ -117,14 +117,14 @@
                         rosewoodpark@gmail.com
                     </div>
                     <div class="social-media">
-                        <a href="#">Facebook</a> |
-                        <a href="#">Twitter</a> |
-                        <a href="#">LinkedIn</a>
+                        <a href="#"><img src="landingpageimages/instagrampic.png" alt="instagram" height="20px" width="20px"></a> |
+                        <a href="#"><img src="landingpageimages/social-media.png" alt="tiktok" height="20px" width="20px"></a> |
+                        <a href="#"><img src="landingpageimages/logo.png" alt="whatsapp" height="20px" width="20px"></a>
                     </div>
                 </div>
             </div>
             <div class="last-image">
-                <img src="exterior.jpg" alt="last-image">
+                <img src="landingpageimages/exterior.jpg" alt="last-image">
             </div>
         </div>
     
