added animation on the logo

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
     <header>
         <div class="logo">
-            <img src="landingpageimages/image-removebg-preview.png" alt="rosewoodpark" width="160" height="130">
+            <h3 class="animated-logo">
+                <span>Rosewood</span> <span>Park</span>
+            </h3>
         </div>
         <nav>
             <a href="#home">HOME</a>
             <a href="#about">ABOUT</a>
+            <a href="#amenities">AMENITIES</a>
             <a href="#contact">CONTACT</a>
             <a href="">LOGIN</a>
             <a href="">REGISTER</a>
@@ -98,36 +101,38 @@
         </div>
     </div>
     <footer>
-        <div class="contact-us">
-            <div class="contact-info">
-                <h1>Contact Us</h1>
-                <p>Please reach out to us with any questions. We look forward to hearing from you!</p>
-                <div class="info">
-                    <div>
-                        <strong>Address:</strong> <br>
-                        Rosewood Avenue<br>
-                        Kilimani, Nairobi
-                    </div>
-                    <div>
-                        <strong>Phone:</strong> <br>
-                        +254 712-345-678
-                    </div>
-                    <div>
-                        <strong>Email:</strong> <br>
-                        rosewoodpark@gmail.com
-                    </div>
-                    <div class="social-media">
-                        <a href="#"><img src="landingpageimages/instagrampic.png" alt="instagram" height="20px" width="20px"></a> |
-                        <a href="#"><img src="landingpageimages/social-media.png" alt="tiktok" height="20px" width="20px"></a> |
-                        <a href="#"><img src="landingpageimages/logo.png" alt="whatsapp" height="20px" width="20px"></a>
+        <div id="contact">
+            <div class="contact-us">
+                <div class="contact-info">
+                    <h1>Contact Us</h1>
+                    <p>Please reach out to us with any questions. We look forward to hearing from you!</p>
+                    <div class="info">
+                        <div>
+                            <strong>Address:</strong> <br>
+                            Rosewood Avenue<br>
+                            Kilimani, Nairobi
+                        </div>
+                        <div>
+                            <strong>Phone:</strong> <br>
+                            +254 712-345-678
+                        </div>
+                        <div>
+                            <strong>Email:</strong> <br>
+                            rosewoodpark@gmail.com
+                        </div>
+                        <div class="social-media">
+                            <a href="#"><img src="landingpageimages/instagrampic.png" alt="instagram" height="20px" width="20px"></a> |
+                            <a href="#"><img src="landingpageimages/social-media.png" alt="tiktok" height="20px" width="20px"></a> |
+                            <a href="#"><img src="landingpageimages/logo.png" alt="whatsapp" height="20px" width="20px"></a>
+                        </div>
                     </div>
                 </div>
+                <div class="last-image">
+                    <img src="landingpageimages/exterior.jpg" alt="last-image">
+                </div>
             </div>
-            <div class="last-image">
-                <img src="landingpageimages/exterior.jpg" alt="last-image">
-            </div>
+        
         </div>
-    
         <div class="get-in-touch">
             <h2>Get In Touch</h2>
             <p>If you have any questions, please fill out the form below. We'll get back to you as soon as possible.</p>
