--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <a href="#about">ABOUT</a>
             <a href="#amenities">AMENITIES</a>
             <a href="#contact">CONTACT</a>
-            <a href="">LOGIN</a>
-            <a href="">REGISTER</a>
+            <a href="login.html">LOGIN</a>
+            <a href="register.html">REGISTER</a>
         </nav>
     </header>
     <section>
