made changes to the logo

--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
 <body>
     <header>
         <div class="logo">
-            <h3 class="animated-logo">
-                <span>Rosewood</span> <span>Park</span>
-            </h3>
+            <img src="landingpageimages/image-removebg-preview.png" alt="logo">
         </div>
         <nav>
-            <a href="#home">HOME</a>
-            <a href="#about">ABOUT</a>
-            <a href="#amenities">AMENITIES</a>
-            <a href="#contact">CONTACT</a>
-            <a href="login.html">LOGIN</a>
-            <a href="register.html">REGISTER</a>
+            <a href="#home"style="--1">HOME</a>
+            <a href="#about"style="--2">ABOUT</a>
+            <a href="#amenities"style="--3">AMENITIES</a>
+            <a href="#contact"style="--4">CONTACT</a>
+            <a href="login.html"style="--5">LOGIN</a>
+            <a href="register.php"style="--6">REGISTER</a>
         </nav>
     </header>
     <section>
