--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="landingpageimages/image-removebg-preview.png" alt="logo">
+            <img src="landingpageimages/image-removebg-preview.png" alt="logo" width="160" height="130">
         </div>
         <nav>
             <a href="#home"style="--1">HOME</a>
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div id="first">
-            <img src="landingpageimages/bg-1.png" alt="rosewoodpark">
+            <img src="landingpageimages/bg-1.png" alt="rosewoodpark" width="650" height="510">
         </div>
     </section>
     <!-------about us -->
