--- a/register.html
+++ b/register.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Real Estate Management</title>
     <link rel="stylesheet" href="style1.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <div>
@@ -19,7 +18,7 @@
         <h1>Register New Client</h1> 
     </div>
     <div>
-        <form id="registrationForm" action="register.php" method="POST">
+        <form id="registrationForm" method="POST" action="register.php">
             <!-- Personal Information -->
             <fieldset>
                 <legend>Personal Information</legend>
