--- a/login.html
+++ b/login.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Real Estate Management</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
-<link rel="stylesheet" href="style1.css">
 <body>
     <div class="logo">
         <h3 class="animated-logo">
             <span>Rosewood</span> <span>Park</span>
         </h3>
+    </div>
     <h1>Client Login</h1>
-    <form action="server.php" method="POST">
+    <form action="login.php" method="POST"> <!-- Updated action to login.php -->
         <!-- Email Input -->
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email" required><br><br>
