--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#about"style="--2">ABOUT</a>
             <a href="#amenities"style="--3">AMENITIES</a>
             <a href="#contact"style="--4">CONTACT</a>
-            <a href="login.php"style="--5">LOGIN</a>
+            <a href="login.html"style="--5">LOGIN</a>
             <a href="register.html"style="--6">REGISTER</a>
         </nav>
     </header>
