modified landing page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#about"style="--i:2">ABOUT</a>
             <a href="#amenities"style="--i:3">AMENITIES</a>
             <a href="#contact"style="--i:4">CONTACT</a>
-            <a href="login.php"style="--i:5">LOGIN</a>
+            <a href="login.html"style="--i:5">LOGIN</a>
             <a href="register.html"style="--i:6">REGISTER</a>
         </nav>
     </header>
