corrected major error in the modal

--- a/resident_homepage.html
+++ b/resident_homepage.html
@@ -30,7 +30,7 @@
     <section id="electricity-token">
         <h2>Electricity Token</h2>
         <p>View your token purchase history here.</p>
-        <button>View History</button>
+        <button onclick="openModal('electricityTokenModal')">View History</button>
     </section>
 
     <section id="rental-payments">
