--- a/resident_homepage.html
+++ b/resident_homepage.html
@@ -173,6 +173,17 @@
         </form>
     </div>
 </div>
+
+<script>
+    function closeModal(modalId) {
+        document.getElementById(modalId).style.display = 'none';
+    }
+
+    function makePayment() {
+        alert("Payment processing...");
+    }
+</script>
+
             
         
 
