--- a/resident_homepage.html
+++ b/resident_homepage.html
@@ -48,7 +48,7 @@
     <section id="notifications">
         <h2>Notifications</h2>
         <p>Rent payment due date REMINDER!!!.</p>
-        <button>Settings</button>
+        <button onclick="openModal('settingsModal')">Settings</button>
     </section>
  </aside>
 
@@ -213,9 +213,31 @@
 </div>
 <div id="settingsModal" class="modal">
     <div class="modal-content">
-        <span class="close" onclick="closeModal('settingsModal')">&times;</span>
-        <h2>Settings</h2>
-        <p>This is where the resident can adjust notification settings.</p>
+        <div class="notification-container">
+            <div class="notification-row">
+              <label for="emailNotifications">Email Notifications:</label>
+              <label class="switch">
+                <input type="checkbox" id="emailNotifications" checked>
+                <span class="slider round"></span>
+              </label>
+              </div>
+          
+            <div class="notification-row">
+              <label for="appNotifications">SMS Notifications:</label>
+              <label class="switch">
+                <input type="checkbox" id="smsNotifications">
+                <span class="slider round"></span>
+              </label>
+            </div>
+          
+            <div class="notification-row">
+              <label for="otherNotifications">App Notifications:</label>
+              <label class="switch">
+                <input type="checkbox" id="otherNotifications">
+                <span class="slider round"></span>
+              </label>
+            </div>
+
         <button onclick="closeModal('settingsModal')">Close</button>
     </div>
 </div>
