--- a/register.html
+++ b/register.html
@@ -5,16 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Real Estate Management</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <div>
-        <div class="logo">
-            <h3 class="animated-logo">
-                <span>Rosewood</span> <span>Park</span>
-            </h3>
-        </div>
-        <h1>Register New Client</h1> 
+    <div class="logo">
+        <img src="landingpageimages/image-removebg-preview.png" alt="logo" width="160" height="130">
     </div>
     <div>
         <form id="registrationForm" method="POST" action="register.php">
