--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <img src="landingpageimages/image-removebg-preview.png" alt="logo" width="160" height="130">
         </div>
         <nav>
-            <a href="#home"style="--i:1" class="active">HOME</a>
-            <a href="#about"style="--i:2">ABOUT</a>
-            <a href="#amenities"style="--i:3">AMENITIES</a>
-            <a href="#contact"style="--i:4">CONTACT</a>
-            <a href="login.html"style="--i:5">LOGIN</a>
-            <a href="register.html"style="--i:6">REGISTER</a>
+            <a href="#home"style="--1">HOME</a>
+            <a href="#about"style="--2">ABOUT</a>
+            <a href="#amenities"style="--3">AMENITIES</a>
+            <a href="#contact"style="--4">CONTACT</a>
+            <a href="login.html"style="--5">LOGIN</a>
+            <a href="register.php"style="--6">REGISTER</a>
         </nav>
     </header>
     <section>
